--- a/MonthlyStatement/Areas/Admin/Views/ListReportPersonal/Detail.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/ListReportPersonal/Detail.cshtml
@@ -13,6 +13,8 @@
     string emails = ViewBag.accID;
     var formPer = models.PersonalReports.Where(p => p.report_period_id == idperiod && p.account_id.Equals(emails));
     int per = ViewBag.PerID;
+    var personalReport = (PersonalReport)ViewBag.PersonalReport;
+
 }
 
 <section class="section">
@@ -25,6 +27,9 @@
                     </div>
                 </div>
                 <div class="col-12">
+                    <button type="button" class="btn btn-primary mb-2" onclick="PrintElem('#formPrint')">In</button>
+                </div>
+                <div class="col-12" id="formPrint">
                     <div class="card">
                         <div class="card-body">
                             @foreach (var items in models.FormPersonalReports.FirstOrDefault(f => f.report_period_id == idperiod).FormPersonalReportDetails.Where(x => x.Category.category_lv == 1).ToList())
@@ -135,81 +140,65 @@
                             <div class="section-title mt-3" style="font-weight:bold">
                                 <label>@(((char) (++j)).ToString()). MINH CHỨNG</label>
                             </div>
-                            <div class="section-title mt-3" style="font-weight:bold">
-                                <label>@(((char) (++j)).ToString()). BÌNH LUẬN</label>
+                            <div class="col">
+                                <table class="table table-bordered dataTable">
+                                    <tbody>
+                                        <tr>
+                                            <td>
+                                                @if (personalReport.file_path != null)
+                                                {
+                                                    <a class="form-control" href="@Url.Action("DownLoad","ListReportPersonal", new {file_path = personalReport.file_path})" download="File import">Tải file</a>
+                                                }
+                                                else
+                                                {
+                                                    <input readonly type="text" value="Không có minh chứng" class="form-control">
+                                                }
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="section-title mt-3" style="font-weight:bold">
+                    <label>@(((char) (++j)).ToString()). BÌNH LUẬN</label>
+                </div>
+                <hr />
+                <div class="col-12">
+                    <div class="card" style="background-color: #e9ecef">
+                        <div class="card-body">
+                            <div class="chat">
+                                @foreach (var comment in models.Comments.Where(x => x.personal_report_id == per).ToList())
+                                {
+                                    <div class="chat-header clearfix">
+                                        <img alt="image" src="~/assets/img/user.png" class="rounded-circle img-fluid">
+                                        <div class="chat-about">
+                                            <div class="chat-time form-inline">
+                                                <div class="chat-with" style="font-style:oblique">@models.AspNetUsers.FirstOrDefault(n => n.Id.Equals(comment.account_id)).Email</div>
+                                                &emsp;
+                                                @comment.comment_date
+                                            </div>
+                                            <div class="chat-text">@comment.comment_content</div>
+                                        </div>
+                                    </div>
+                                }
+
                             </div>
                             <hr />
-                            <div class="col-12">
-                                <div class="card" style="background-color: #e9ecef">
-                                    <div class="card-body">
-
-                                        <div class="chat">
-                                            @foreach (var comment in models.Comments.Where(x => x.personal_report_id == per).ToList())
-                                            {
-                                                <div class="chat-header clearfix">
-                                                    <img alt="image" src="~/assets/img/user.png" class="rounded-circle img-fluid">
-                                                    <div class="chat-about">
-                                                        <div class="chat-time form-inline">
-                                                            <div class="chat-with" style="font-style:oblique">@models.AspNetUsers.FirstOrDefault(n => n.Id.Equals(comment.account_id)).Email</div>
-                                                            &emsp;
-                                                            @if (models.AspNetRoles.Count() < 1)
-                                                            {
-                                                                <div class="badge badge badge-shadow">Không có vai trò</div>
-                                                            }
-                                                            else if (models.AspNetRoles.First().Name.Equals("Quản trị viên"))
-                                                            {
-                                                                <div class="badge badge badge-dark">Quản trị viên</div>
-                                                            }
-                                                            else if (models.AspNetRoles.First().Name.Equals("Ban phòng khoa"))
-                                                            {
-                                                                <div class="badge badge badge-danger">Ban phòng khoa</div>
-                                                            }
-                                                            else if (models.AspNetRoles.First().Name.Equals("Thư ký"))
-                                                            {
-                                                                <div class="badge badge badge-warning">Thư ký</div>
-                                                            }
-                                                            else if (models.AspNetRoles.First().Name.Equals("Bộ môn"))
-                                                            {
-                                                                <div class="badge badge badge-info">Bộ môn</div>
-                                                            }
-                                                            else if (models.AspNetRoles.First().Name.Equals("Giảng viên"))
-                                                            {
-                                                                <div class="badge badge badge-success">Giảng viên</div>
-                                                            }
-                                                            else if (models.AspNetRoles.First().Name.Equals("Nhân viên"))
-                                                            {
-                                                                <div class="badge badge badge-success">Nhân viên</div>
-                                                            }
-                                                            else if (models.AspNetRoles.First().Name.Equals("Chưa cấp quyền"))
-                                                            {
-                                                                <div class="badge badge badge-primary">Chưa cấp quyền</div>
-                                                            }
-                                                            &emsp;
-                                                            @comment.comment_date
-                                                        </div>
-                                                        <div class="chat-text">@comment.comment_content</div>
-                                                    </div>
-                                                </div>
-                                            }
-
-                                        </div>
-                                        <hr />
-                                        <h4>Viết bình luận .... <span class="fas fa-pen" style="font-size:1.2rem"></span></h4>
-                                        @using (Html.BeginForm("PostCommentPersonal", "Comments", FormMethod.Post))
-                                        {
-                                            <input type="hidden" name="id" value="@per" />
-                                            <div class="form-group">
-                                                <textarea class="form-control" name="CommentText" style="height:200px !important"></textarea>
-                                            </div>
-                                            <div class="text-right mt-3">
-                                                <button class="btn btn-primary" type="submit">
-                                                    Gửi
-                                                </button>
-                                            </div>
-                                        }
-                                    </div>
+                            <h4>Viết bình luận .... <span class="fas fa-pen" style="font-size:1.2rem"></span></h4>
+                            @using (Html.BeginForm("PostCommentPersonal", "Comments", FormMethod.Post))
+                            {
+                                <input type="hidden" name="id" value="@per" />
+                                <div class="form-group">
+                                    <textarea class="form-control" name="CommentText" style="height:200px !important"></textarea>
                                 </div>
-                            </div>
+                                <div class="text-right mt-3">
+                                    <button class="btn btn-primary" type="submit">
+                                        Gửi
+                                    </button>
+                                </div>
+                            }
                         </div>
                     </div>
                 </div>
@@ -217,3 +206,27 @@
         </div>
     </div>
 </section>
+<script>
+    function PrintElem(elem) {
+        Popup($('<div/>').append($(elem).clone()).html());
+    }
+
+    function Popup(data) {
+        var mywindow = window.open();
+        mywindow.document.write('<html><head><title>Invoice</title>');
+        mywindow.document.write("<link rel=\"stylesheet\" href=\"/assets/css/bootstrap.min.css\" type=\"text/css\"/>");
+        mywindow.document.write("<link rel=\"stylesheet\" href=\"/assets/css/custom.css\" type=\"text/css\"/>");
+        mywindow.document.write('</head><body>');
+        mywindow.document.write(data);
+        mywindow.document.write('</body></html>');
+
+        mywindow.document.close(); // necessary for IE >= 10
+        mywindow.focus(); // necessary for IE >= 10*/
+
+        setTimeout(function () {
+            mywindow.print();
+            mywindow.close();
+        }, 1000);
+        return true;
+    }
+</script>
