--- a/MonthlyStatement/Areas/Personal/Views/FormReport/Index.cshtml
+++ b/MonthlyStatement/Areas/Personal/Views/FormReport/Index.cshtml
@@ -207,8 +207,8 @@ else
                                     <label class="input-group-text" for="inputGroupFile02">Upload</label>
                                 </div>
                                 <div class="text-right mt-3">
-                                    @*<button id="btnSubmit" type="button" class="btn btn-primary">Lưu báo cáo</button>*@
-                                    <a id="btnSubmit" role="button" class="btn btn-primary" href="@Url.Action("SendMailPersonalAsync","NotificationPersonal")">Lưu báo cáo</a>
+                                    <button id="btnSubmit" type="button" class="btn btn-primary">Lưu báo cáo</button>
+                                    @*<a id="btnSubmit" role="button" class="btn btn-primary" href="@Url.Action("SendMailPersonalAsync","NotificationPersonal")">Lưu báo cáo</a>*@
                                 </div>
                             </div>
                         </div>
